--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,16 @@ tr:nth-child(odd) td{
 
 <hr>
 
-<h2>2.&ensp;Aircraft Tally</h2>
+<h2>2.&ensp;E&amp;E Honorable Mentions</h2>
+<ul>
+  <li class="ee">E&E was anonymously accused of either not issuing or delaying fastener replacement work order(s) for <b>6C60</b>. This claim requires further validation.</li>
+  <li class="ee">Post‑strip inspection on <b>6C67</b> finished —‐aircraft cleared.</li>
+  <li class="ee"><b>6C55</b> fuselage under stress‑sampling hold (<b>examiner</b> work‑stop).</li>
+  <li class="ee">Ronald Smith (Turbo volunteered us to start our second check today) (Friday, the 18th).</li>
+</ul>
+<hr>
+
+<h2>3.&ensp;Aircraft Tally</h2>
 <table>
 <thead>
 <tr><th>Seq</th><th>Current Status</th><th>Action&nbsp;/&nbsp;Plan</th></tr>
@@ -120,7 +129,7 @@ tr:nth-child(odd) td{
 
 <hr>
 
-<h2>3.&ensp;Misc. Issues and Plans</h2>
+<h2>4.&ensp;Misc. Issues and Plans</h2>
 <ul>
   <li>On‑board <b>73</b> new inductees 21 Jul; prioritise assembly tasks.</li>
   <li>Confirm two aircraft for paint next week (white/gray).</li>
@@ -129,13 +138,5 @@ tr:nth-child(odd) td{
   <li>Move Coupe de Ville personnel to <b>6C49</b> for completion surge.</li>
 </ul>
 
-<hr>
-
-<h2>4.&ensp;E&amp;E Mentions</h2>
-<ul>
-  <li class="ee">E&E was anonymously accused of either not issuing or delaying fastener replacement work order(s) for <b>6C60</b>. This claim requires further validation.</li>
-  <li class="ee">Post‑strip inspection on <b>6C67</b> finished — aircraft cleared.</li>
-  <li class="ee"><b>6C55</b> fuselage under stress‑sampling hold (<b>examiner</b> work‑stop).</li>
-</ul>
 </body>
 </html>
